test/badLhs1.slq


def main(){
	(x,y)[1]:=3; /// error
}
